# railscan-pro-edge-ai-rover

./: .gitignore  README.md  pyproject.toml  requirements-train.txt  requirements.txt
arduino/railscan_motor_controller/: railscan_motor_controller.ino
config/: railscan.yaml
datasets/: README.md
datasets/railscan_v1/: README.md  data.yaml
docs/: arduino-wiring.md  build-notes.md  camera-setup.md  decision-engine.md  demo-report-template.md  demo-runbook.md  demo-script.md  demo-video-shot-list.md  detection-adapter.md  evidence-capture-checklist.md  final-qa-checklist.md  hardware-validation-checklist.md  inference-setup.md  judge-walkthrough.md  model-training-export.md  release-notes-v0.1.0.md  runtime-integration.md  serial-stop.md  submission-summary.md
landing/: index.html  package-lock.json  package.json
landing/src/: App.tsx  constants.ts  index.css
landing/src/components/: CTA.tsx  (+11 more)
models/: README.md
scripts/: benchmark_inference.py  camera_test.py  decision_test.py  detection_test.py  export_onnx.py  final_qa.py  inference_test.py  package_demo_artifacts.py  run_demo.py  serial_stop_test.py  smoke_check.py  train_yolo.py  validate_model_artifact.py
src/railscan/: __init__.py  camera.py  config.py  decision.py  detection_adapter.py  exceptions.py  inference.py  logger.py  runtime.py  serial_client.py
tests/: test_camera.py  test_config.py  test_decision.py  test_detection_adapter.py  test_final_qa_docs.py  test_imports.py  test_inference.py  test_release_submission_docs.py  test_runtime.py  test_serial_client.py  test_training_export_scripts.py
(+1 files in other folders)
