[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "railscan-pro"
version = "0.1.0"
description = "Modular foundations for the RailScan Pro railway track inspection rover prototype."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML", "pyserial", "numpy", "opencv-python", "onnxruntime"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
